--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#583E26</color>
+    <color name="primaryDark">#9C4A1A</color>
+    <color name="accent">#F7C815</color>
+    <color name="background">#A78B71</color>
+    <color name="textColor">#EC9704</color>
 </resources>
