--- a/app/src/main/res/layout/activity_login_history.xml
+++ b/app/src/main/res/layout/activity_login_history.xml
@@ -2,12 +2,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/history_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="@color/textColor"/>
+        android:textColor="@color/textColor"
+        android:text="Login History:"/>
 </LinearLayout>
