--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/welcome_text"
@@ -11,7 +12,8 @@
         android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/textColor"/>
+        android:textColor="@color/textColor"
+        android:text="Welcome!"/>
 
     <Button
         android:id="@+id/btn_logout"
